bigger HTML5 code area so the whole code is visible - Fixes #270

--- a/interfaces/php/admin/ui/default/assets/css/admin.css
+++ b/interfaces/php/admin/ui/default/assets/css/admin.css
@@ -23,7 +23,9 @@ div.callout.bright a {color:#000;}
 div.callout.bright a:hover {color:#f00 !important;}
 code {font-size:11px;}
 code a {color:#23c;}
-code input {width:670px !important;border:0 !important;font-size:11px !important;background-color:#ededef !important;font-family:'courier', monospace !important;margin-top:-2px;font-style:normal !important;position:relative;top:-1px;}
+code input, code textarea {width:670px !important;border:0 !important;font-size:11px !important;background-color:#ededef !important;font-family:'courier', monospace !important;margin-top:-2px;font-style:normal !important;position:relative;top:-1px;}
+code textarea {height:60px;resize: none;}
+.codelabel {vertical-align:top;}
 fieldset {border: 0; margin: 0; padding: 0;}
 img {border:0;}
 ul, ol {padding:0.5em 0 1em 1.5em;}
